--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
       <li class="menu-item"><a class="link" href="#">Контакты</a></li>
     </ul>
     <div class="contact">
-      <button class="phone mod focus"></button>
-      <button class="message mod focus"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <button class="phone mod focus"><a href="#"></a></button>
+      <button class="message mod focus"><a href="#"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path fill-rule="evenodd" clip-rule="evenodd" d="M18 0H2C0.9 0 0.01 0.9 0.01 2L0 20L4 15H18C19.1 15 20 14.1 20 13V2C20 0.9 19.1 0 18 0ZM11 11H5C4.45 11 4 10.55 4 10C4 9.45 4.45 9 5 9H11C11.55 9 12 9.45 12 10C12 10.55 11.55 11 11 11ZM15 6H5C4.45 6 4 5.55 4 5C4 4.45 4.45 4 5 4H15C15.55 4 16 4.45 16 5C16 5.55 15.55 6 15 6Z" fill="white"/>
-        </svg>
+        </svg></a>
         </button>
       <button class="profile mod "></button>
       <div><p class="mail">mail@cps.com</p></div>
