--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         </svg>
         </button>
       <button class="profile mod "><img src="img/profil.png" alt=""></button>
-      <div class="block-mail"><a type="email" class="mail" href="">mail@cps.com</a></div>
-      <div class="block-namber"><a type="tel" class="namber" href="">8 800 890 8900</a></div>
+      <div class="block-mail"><a  class="mailto:mail@cps.com" href="">mail@cps.com</a></div>
+      <div class="block-namber"><a  class="namber" href="tel:+7 800 890 8900">8 800 890 8900</a></div>
     
     <div class="leng">
       <a href="" class="leng-link">RU</a>
